# eddy

./: .gitignore  .tmuxinator.yml  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  flake.nix  justfile  lefthook.yml  opencode.json
.forgejo/workflows/: ci.yml
.opencode/: package-lock.json  package.json
.opencode/agents/: architecture-reviewer.md  build.md  docs-operator-reviewer.md  forgejo-feedback-processor.md  rgr-diagnostic-implementer.md  rgr-implementation-reviewer.md  rgr-test-author.md  rgr-test-reviewer.md  security-reviewer.md  test-coverage-reviewer.md
.opencode/commands/: bugfix-rgr.md  local-review-uncommitted.md  local-review.md  outside-in-rgr.md  prepare-forgejo-pr.md  process-pr-feedback.md  refactor-safely.md  tdd-implement.md  verify.md
.opencode/plugins/: auto-review-context.ts  auto-review-discipline.ts  auto-review-forgejo.ts  auto-review-toolchain.ts  discipline-guardrails.ts
.opencode/rules/: branch-first.md  forgejo.md  scope-hygiene.md  security.md  tdd-discipline.md  toolchain.md  verification.md
docs/: AGENTS.md  ARCHITECTURE.md
docs/adrs/: 0001-rust-native-cucumber-tui-acceptance-tests.md  0018-rust-lint-forbid-policy.md  0019-rust-unit-test-sidecar-modules.md  0020-enumerate-clippy-all-lints-with-build-time-drift-check.md  0021-clarify-node-role-in-tooling.md
docs/event-model/: README.md
examples/: first_launch_setup_acceptance.rs
scripts/: fail-on-warning.mjs  sync-clippy-lints.mjs
src/: main.rs
tests/: cargo-build-guardrail.test.mjs  clippy-lint-policy.test.mjs  opencode-rgr-task-gate.test.mjs
(+24 files in other folders)
